Time Attrs Removed From Domain
