# internal/adapters/http/fiberapp/handler_user.go
@@ -159,10 +159,12 @@ func (h *UserHandler) UpdateMe(c fiber.Ctx) error {
 	return SendNoContent(c)
 }
 
-func mapToResponse(user application.UserResponse) UserResponse {
+func mapToResponse(user application.UserReadModel) UserResponse {
 	return UserResponse{
-		ID:    user.ID,
-		Email: user.Email,
+		ID:        user.ID,
+		Email:     user.Email,
+		CreatedAt: user.CreatedAt.Format("2006-01-02T15:04:05Z"),
+		UpdatedAt: user.UpdatedAt.Format("2006-01-02T15:04:05Z"),
 	}
 }
 
