# internal/adapters/http/fiberapp/response.go
@@ -15,8 +15,10 @@ type RegisterUserResponse struct {
 }
 
 type UserResponse struct {
-	ID    string `json:"id"`
-	Email string `json:"email"`
+	ID        string `json:"id"`
+	Email     string `json:"email"`
+	CreatedAt string `json:"created_at"`
+	UpdatedAt string `json:"updated_at"`
 }
 
 type PasswordPolicyHTTPResponse struct {
